# cptr480-template

./: .gitignore  .gitmodules  2026_board_README_template.md  CMakeLists.txt  CPTR-480_Schedule.md  GETTING_STARTED.md  README.md  pico_sdk_import.cmake
Assignments/: Assignment_01.md  Assignment_02.md  Assignment_03.md  Assignment_04.md  Assignment_05.md  Assignment_06.md  Assignment_07.md  Assignment_08.md
Labs/: Lab_01.md  Lab_02.md  Lab_03.md  Lab_04.md  Lab_05.md  Lab_06.md  Lab_07.md  Lab_08.md  Lab_09.md  Lab_10.md  Si5351a_CDC_Protocol.md  quisk_conf_2026.py  quisk_widgets_2026.py
Lectures/: Board Bring-up.ipynb  lecture_march30.ipynb
YD-RP2040_V1.3/: .gitignore  YD-RP2040_V1.3.kicad_prl  YD-RP2040_V1.3.kicad_pro  YD-RP2040_V1.3.kicad_sch
journal/: README.md  week1.md
lab1/: CMakeLists.txt
lab1/sdk_blink/: main.c
